10:00 - 11:30 and 18:00 - 22:30 - Get rid of webinars happening soon and green line (on mobile, keep on desktop) - Ensure ">" is in the same place on all cards - Make cards slightly less high - Webinar title: not all caps - "View all webinars" as per Figma - Change "Recorded courses" to "On-demand courses" - Make top level categories clickable - Get rid of "for teens" - Courses home should be "View all courses" and be on the left - Keep the course categories capital (for now) - On mobile: get rid of Course topics and green line (but keep on desktop) - Get rid of Professional training and green line (just on mobile, keep on desktop) - Change the linked EMDR Training to Standard Training - Add another link called Refresher Training

--- a/src/styles/components/header-navigation/menu.scss
+++ b/src/styles/components/header-navigation/menu.scss
@@ -21,8 +21,8 @@
       li {
         margin-left: 0;
         margin: 0;
-        a,
-        label {
+        > a,
+        > label {
           letter-spacing: 0.03em;
           text-transform: uppercase;
           text-decoration: none;
